--- a/valentine.html
+++ b/valentine.html
@@ -31,7 +31,7 @@
 		<br> 
 
 				U know what is interesting about this? I don't know what is ur favorite chocolate so i bought three of it. I am wondering which one is ur favorite. I also wondering how ur face will look like. Are u surprised or are u gonna be confuse or are u gonna hate it? one thing that i really sure is ur pretty face will still there. 
-
+		Using card is already old school you know, so i made this webpage for you. Its hard cause i dont have basic of it and stuff like that. 
 				<br>
 				<br> 
 				Happy Valentine's Day Amira, Its just one day in a year but my love will always be here. 
