--- a/valentine.html
+++ b/valentine.html
@@ -44,7 +44,7 @@
 <br>
 
 <p>
-	*Don't look for me cause that’s not even my real name. But if u know me then just pretend that u dont know me. Keep it in ur head.
+	*Don't look for me cause that is just my alias name. But if u know me, which im pretty sure you know me. Just pretend that u dont know me. Keep it in ur head.
 </p>
 
 <br>
